--- a/toybox_project/panel_all.html
+++ b/toybox_project/panel_all.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Panel</title>
+    <title>Panel All - รวมแผ่นไม้ทั้งหมด</title>
     <style>
         body { margin: 0; padding: 0; background: #1a1a1a; overflow: hidden; }
         #container { position: relative; width: 100vw; height: 100vh; }
@@ -34,6 +34,6 @@
     <div id="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script src="test_panel_script.js"></script>
+    <script src="panel_all_script.js"></script>
 </body>
 </html>
